# EasyTracer

./: .gitignore  README.md  pyproject.toml
doc/: easytracer_gui_重构_520e97ee.plan.md
src/easy_tracer/: main.py
src/easy_tracer/framework/: adb_adapter.py  perfetto_adapter.py  simpleperf_adapter.py  subprocess_utils.py  systrace_adapter.py  traceview_adapter.py
src/easy_tracer/models/: device.py
src/easy_tracer/presenters/: combo_presenter.py  main_presenter.py  perfetto_presenter.py  simpleperf_presenter.py  systrace_presenter.py  traceview_presenter.py
src/easy_tracer/services/: capture_service.py  combo_service.py  config_service.py  device_service.py  perfetto_service.py  simpleperf_service.py  traceview_service.py
src/easy_tracer/ui/: main_window.py  qt_threading.py
src/easy_tracer/ui/components/: device_toolbar.py  log_panel.py  output_path_widget.py
src/easy_tracer/ui/panels/: about_panel.py  combo_panel.py  device_panel.py  perfetto_panel.py  settings_panel.py  simpleperf_panel.py  systrace_panel.py  traceview_panel.py
tests/: smoke_test.py  test_adb_adapter.py  test_combo_service.py  test_perfetto_adapter.py  test_simpleperf_adapter.py  test_systrace_adapter.py  test_traceview_adapter.py  verify_exe.py
tests/integration/: test_e2e.py  test_real_device.py  test_release_bat_coverage.py
tools/: release.py
